syntax = "proto3";

package pb;
option go_package="./pb";

// goctl rpc protoc ./user.proto --go_out=. --go-grpc_out=. --zrpc_out=./

import "google/protobuf/timestamp.proto"; // 使用timestamp类型

service UserService {
  // 用户注册
  rpc Register(RegisterRequest) returns (RegisterResponse);
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Profile(ProfileRequest) returns (ProfileResponse);
}

message User {
  int64 id = 1;
  string phone = 2;
  string email = 3;
  string password = 4;
  string nick_name = 5;
  string avatar = 6;
  google.protobuf.Timestamp ctime = 7;
}

message RegisterRequest {
  User user = 1;
}

message RegisterResponse {
  int64 uid = 1;
}

message LoginRequest{
  string phone = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
}

message ProfileRequest {
  int64 uid = 1;
}

message ProfileResponse {
  User user = 1;
}